# neat-ml

./: .gitignore  .travis.yml  IMGVR_sample.sh  LICENSE  README.md  go.yaml  go_plus.yaml  make_go_data.sh  neat.py  neat.yaml  neat_quickstart.yaml  pyproject.toml  quickstart.yaml  run_IMGVR_V100_new.sl  setup.py  sonar-project.properties  tox.ini
.github/workflows/: main.yml  qc.yml  unit_tests_and_lint.yml
input_data/: analyze_GO_pos_neg_edges.py  analyze_pos_neg_edges.py  analyze_positive_edges.py  make_go_data.sh  make_go_holdouts.py  make_go_plus_holdouts.py  make_hpo_holdouts.py
neat/: __init__.py  classifier.py  cli.py  embeddings.py
neat/graph_embedding/: graph_embedding.py
neat/holdouts/: holdouts.py
neat/link_prediction/: link_prediction.py  make_link_prediction_data.py  mlp.py  mlp_factory.py  mlp_model.py  model.py  model_factory.py  sklearn_model.py
neat/pre_run_checks/: pre_run_checks.py
neat/run_classifier/: run_classifier.py
neat_ml/: __init__.py  cli.py  method_names.py
notebooks/: A NEAT Demonstration.ipynb  ecto_kgx_tsv.tar.gz.1
quickstart_output/: quickstart_embedding.csv  quickstart_embedding_history.json
scripts/: IMGVR_sample.sh  aws_upload.py  run_IMGVR_V100_new.sl  update_yaml.py
tests/: test_cli.py  test_do_update_yaml.py  test_graph_embedding.py  test_holdouts.py  test_link_prediction.py  test_neat.py  test_pre_run_checks.py  test_run_classifier.py  test_tsne.py  test_upload.py  test_visuals.py  test_yaml_helper.py
yaml_ml_instructions/: IMGVR_sample.yaml  go.yaml  go_plus.yaml  go_plus_bert.yaml  hp_mp.yaml  hpo.yaml
(+72 files in other folders)
