[tool.poetry]
name = "neat-ml"
version = "0.1.0"
description = "Network Embeeding of All Things."
authors = [
    "Justin Reese <JustinReese@lbl.gov>",
    "Harry Caufield <jhc@lbl.gov>",
    "Harshad Hegde <hhegde@lbl.com>",
    ]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
click = "^8.1.3"
PyYAML = "^6.0"
sklearn = "^0.0"
opencv-python = "^4.6.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
jaro-winkler = "2.0.0"
grape = "^0.1.7"
transformers = "^4.20.0"
boto3 = "^1.24.13"
botocore = "^1.27.13"
linkml = "^1.2.14"
linkml-validator = "^0.3.0"
neat-ml-schema = "^0.1.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
parameterized = "^0.8.1"

[tool.black]
line-length = 79

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
